examples/test/testpolicy16263.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16263
  namespace: namespace280
spec:
  podSelector:
    matchLabels:
      key0: value26
      key44: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value4
      podSelector:
        matchLabels:
          key10: value3
          key17: value42
          key34: value20
